# mirin

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  todo.md
.codex/: config.toml
.github/workflows/: bump-cask.yml  release.yml
docs/: README.md  architecture.md  cli.md  mcp.md
docs/development/: contributing.md  setup.md
docs/explanation/: architecture.md
docs/getting-started/: first-mirror.md  installation.md
docs/guides/: device-management.md  files-and-apps.md  mirroring.md  troubleshooting.md  wireless-pairing.md
docs/reference/: cli.md  mcp-resources.md  mcp-tools.md  mcp.md  settings.md
graphify-out/: .graphify_analysis.json  .graphify_chunk_01.json  .graphify_chunk_03.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/cache/: stat-index.json
landing/: index.html  styles.css
mirin-website/: .gitignore  next.config.ts  package-lock.json  package.json
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/mirin-cli/: Cargo.toml
src-tauri/crates/mirin-cli/src/: main.rs
src-tauri/crates/mirin-core/: Cargo.toml
src-tauri/crates/mirin-core/src/: apps.rs  device_registry.rs  files.rs  lib.rs  screenshot.rs  settings.rs  ui_extractor.rs
src-tauri/crates/mirin-core/src/adb/: mod.rs
src-tauri/crates/mirin-core/src/scrcpy/: control.rs  mod.rs  stream.rs  video.rs
src-tauri/crates/mirin-core/src/utils/: names.rs
src-tauri/crates/mirin-core/tests/: adb_failure_tests.rs  adb_integration_tests.rs  registry_failure_tests.rs  registry_integration_tests.rs
src-tauri/crates/mirin-mcp/: Cargo.toml
src-tauri/crates/mirin-mcp/src/: executor.rs  lib.rs  resources.rs  screenshot.rs  server.rs  tools.rs  utils.rs
src-tauri/crates/mirin-mcp/tests/: mcp_integration_tests.rs
src-tauri/icons/: icon.icns
src-tauri/resources/scrcpy/macos-aarch64/: out.txt
src-tauri/src/: lib.rs  main.rs  mcp.rs
src-tauri/src/adb/: mod.rs
src-tauri/src/commands/: apps.rs  console.rs  device.rs  files.rs  mod.rs  scrcpy.rs  settings.rs
src-tauri/src/core/: device_registry.rs  mod.rs  screenshot.rs
src-tauri/src/core/scrcpy/: mod.rs  stream.rs
src-tauri/src/mcp/: mod.rs  resources.rs  screenshot.rs  tools.rs  ui_extractor.rs
src-tauri/src/scrcpy/: control.rs  mod.rs  stream.rs  video.rs
src-tauri/src/utils/: mod.rs
src/assets/: logo.af
src/components/: ActiveSessions.tsx  AppManager.tsx  ConfirmDialog.tsx  ConnectDeviceModal.tsx  ConsoleManager.tsx  DeviceCard.tsx  DeviceList.tsx  DeviceTable.tsx  EmbeddedMirrorPopup.tsx  EmbeddedMirrorView.tsx  ErrorBoundary.tsx  FileManager.tsx  HelpButton.tsx  IPInputDialog.tsx  InputDialog.tsx  LoadingSpinner.tsx  MainLayout.tsx  MirrorButton.tsx  MirrorStatus.tsx  ProcessManager.tsx  SavedDevicesList.tsx  SettingsPanel.tsx  Sidebar.tsx  ThemeProvider.tsx  Toast.tsx  ToastProvider.tsx  Tooltip.tsx  WifiPairPanel.tsx  WirelessSetupWizard.tsx
src/hooks/: useDeviceConnector.ts  useMirrorDecoder.ts
src/pages/: DeviceDashboard.tsx  Home.tsx  SettingsPage.tsx
src/services/: appService.ts  consoleService.ts  deviceService.ts  fileService.ts  index.ts  mcpService.ts  (+4 more)
(+27 files in other folders)
