[package]
name = "mirin"
version = "0.2.0"
description = "Mirin - Android Screen Mirroring"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mirin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
socket2 = "0.5"
byteorder = "1"
base64 = "0.22"
anyhow = "1"
urlencoding = "2"
quick-xml = "0.36"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
