[package]
name = "mirin-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
socket2 = "0.5"
byteorder = "1"
base64 = "0.22"
anyhow = "1"
urlencoding = "2"
quick-xml = "0.36"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
